fix: language selection dropdown spacing and selecting issue fixed

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -703,7 +703,7 @@
 		position: absolute;
 		padding: 24px 0px;
 		padding-bottom: 4px;
-		z-index: 9999;
+		z-index: 999;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
@@ -814,29 +814,10 @@
 					color: #191f33;
 					margin-bottom: 12px;
 				}
-				.language-select {
-					width: 100%;
-					.country_selector {
-						color: #191f33;
-						padding-left: 32px;
-					}
-					.country-select {
-						width: 100%;
-					}
 
-					.flag-dropdown {
+				.language-picker {
+					&__button {
 						width: 100%;
-						.selected-flag {
-							width: 100%;
-							background-color: transparent;
-							&:hover {
-								background-color: transparent;
-							}
-							.arrow {
-								border-color: #191f33;
-								border-width: 0px 2px 2px 0px;
-							}
-						}
 					}
 				}
 			}
